Royalty div spacing fix on chrome

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    font-family:'Helvetica';
     background: linear-gradient(177.28deg, #EBFDFE 2.27%, #F8F5FF 49.51%, #F6FCE7 97.74%);
 }
 
@@ -200,7 +201,6 @@
 .RoyaltyDiv {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     padding: 0px;
     width: 576px;
@@ -243,10 +243,11 @@
     font-family: 'Helvetica', sans-serif;
 }
 
-.RoyaltyPercentageDiv {
+.RoyaltyCutDiv {
     display: flex  ;
     flex-direction: column;
     align-items: flex-start;
+    width: 100%;
 }
 
 .RoyaltyPercentLabel {
@@ -262,7 +263,7 @@
 }
 
 .RoyaltyPercentInput {
-    min-width: 75%;
+    min-width: 100%;
     min-height: 40px;
     background: rgba(0, 0, 0, 0.02);
     border: 1px solid rgba(0, 0, 0, 0.2);
